# packages/server/src/routes/campsites/campsitesRoutes.ts
@@ -1,14 +1,14 @@
-import { Router, Request, Response } from 'express';
-import { getCampsites, getCampsiteById } from '../../controllers/campsites/campsitesController';
+import { Router, Request, Response } from 'express'
+import { getCampsites, getCampsiteById } from '../../controllers/campsites/campsitesController'
 
-const campsitesRouter = Router();
+const campsitesRouter = Router()
 
 campsitesRouter.get('/', (req: Request, res: Response) => {
-  getCampsites(req, res);
-});
+  getCampsites(req, res)
+})
 
 campsitesRouter.get('/:id', (req: Request, res: Response) => {
-  getCampsiteById(req, res);
-});
+  getCampsiteById(req, res)
+})
 
-export default campsitesRouter;
+export default campsitesRouter
